--- a/InstitutionAdmin/OLD css/IA_viewInstitutionsStyle.css
+++ b/InstitutionAdmin/OLD css/IA_viewInstitutionsStyle.css
@@ -2,8 +2,52 @@ body{
 background-color: #f4f5f7;
 }
 
+.GlobalAdminsHeader{
+	background-color: #bfefff;
+	color: #2b1459;
+width: 976px;
+text-align: center;
+}
+
+.viewInstitutionHeader{
+	background-color: #bfefff;
+	color: #2b1459;
+width: 976px;
+text-align: center;
+font-size: 18pt;
+}
+
+.viewInstitutionsMultilineSelect{
+border-style: solid;
+border-width: 2px;
+width: 470px;
+height: 500px;
+margin: 20px;
+float:left;
+}
+
+select[id="selectInstitution"]{
+	margin: 10px;
+	text-align: center;
+width: 440px;
+height: 430px;
+white-space: wrap;
+font-size: 20pt;
+}
+
+
+
+.filterBy{
+	border-style: solid;
+border-width: 2px;
+width: 400px;
+height: 500px;
+margin: 20px;
+float:right;
+}
+
 .container{
-width: 1110px;
+width: 976px;
 height: 1000px;
 margin-left: auto;
 margin-right: auto;
@@ -13,118 +57,6 @@ border-width: 2px;
 border-color: black;
 }
 
-.GlobalAdminsHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 1110px;
-text-align: center;
-}
-
-.viewCoursesHeader{
-	background-color: #bfefff;
-	color: #2b1459;
-width: 1110px;
-text-align: center;
-font-size: 18pt;
-}
-
-/*.viewCoursesInformation{
-border-style: solid;
-border-width: 2px;
-width: 470px;
-height: 500px;
-margin: 20px;
-float:left;
-}*/
-
-select[id="selectInstitution"]{
-	margin: 10px;
-	text-align: center;
-width: 400px;
-height: 300px;
-white-space: wrap;
-font-size: 20pt;
-}
-
-
-.navigationBar{
-
-	
-	background-color: #858fa0;
-	font-size: 18pt;
-border-style: solid;
-padding: 20px;
-margin: 20px;
-
-}
-#adminTable{
-	text-align: center;
-	color: #002056;
-border-width: 2px;
-border-color: red;
-}
-
-.courseListDiv{
-border-style: solid;
-border-width: 2px;
-width: 470px;
-height: 700px;
-margin: 20px;
-float:left;
-}
-
-.courseInfo{
-border-style: solid;
-border-width: 2px;
-width: 550px;
-height: 700px;
-margin: 20px;
-float:right;
-
-}
-
-input[id="navigationBarButton"]{
-	font-size: 12pt;
-	border-style: solid;
-	border-radius: 5px;
-	border-color: black;
-	border-width: 1px;
-	margin: 2px;
-	height: 30px;
-}
-
-h2[id="filterByHeader"]{
-	margin: 5px;
-	text-align: center;
-	padding: 0px;
-}
-
-p[id="instituteIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="userIDLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-
-p[id="adminTypeLabel"]{
-	margin: 5px;
-	width: 100px;
-	padding: 0px;
-	float:left;
-}
-select[id="selectAdminType"]{
-		margin: 5px 80px 5px 5px;
-	width: 200px;
-	padding: 0px;
-	float:right;
-}
 
 /*Testing 1,2,3 */
 
