--- a/InstitutionAdmin/IA_Jointstyle.css
+++ b/InstitutionAdmin/IA_Jointstyle.css
@@ -4,9 +4,7 @@ height: 1500px;
 margin-left: auto;
 margin-right: auto;
 background-color: white;
-border-style: solid;
-border-width: 1px;
-border-color: grey;
+border: 0px solid grey;
 }
 
 
@@ -30,8 +28,8 @@ img[class="CRRClogo"]{
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
     background-color: #085646;
 
@@ -1012,7 +1010,7 @@ input[class="commonBtn2InViewPrograms"]{
 	border-width: 1px;
 	border-radius: 10px;
 }
-.IA_addInstitutionUserContainer input[id="addUserInput"]{
+.IA_addInstitutionUserContainer input[class="addUserInput"]{
     display: inline-block;
     font-size: 10pt;
 	padding: 3px 10px;
@@ -1068,7 +1066,20 @@ input[class="commonBtn2InViewPrograms"]{
     border: 2px solid black;
     border-radius: 5px;
 }
+/*User Name and Password*/
 
+div[class="userNameAndPwd"]{
+    text-align: center;
+    background-color: #858fa0;
+    width: 500px;
+    height: 150px;
+    margin: 0px 0px 0px 400px;
+    float: left;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+/* end of user name and password in add user*/
 /* Start Div Save or Cancel Button */
 
 .IA_addInstitutionUserContainer div[id="saveOrCancelButtons"]{
