--- a/jointStyle.css
+++ b/jointStyle.css
@@ -3,12 +3,29 @@
 
 /* Style For All Pages */
 
+/*To Disable resize of text area*/
+textarea{
+    resize: none;
+}
+
+
+/*
+    Logo for CRRC
+*/
+img[class="CRRClogo"]{
+    width: 390px; height: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    float: center;
+}
+
+
 body{
 background-color: #f4f5f7;
 }
 
 .TitleHeader{
-	background-color: #bfefff;
+	/*background-color: #bfefff;*/
 	color: #2b1459;
 width: 1200px;
 text-align: center;
@@ -20,10 +37,8 @@ width: 1200px;
 height: 1500px;
 margin-left: auto;
 margin-right: auto;
-background-color: #b3c1d6;
-border-style: solid;
-border-width: 2px;
-border-color: black;
+background-color: ;
+border: 1px solid black;
 }
 
 /*Testing 1,2,3 (Navigation Bar) */
@@ -32,7 +47,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #085646;
 }
 
 li {
@@ -48,7 +63,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: black;
+    background-color: #007ec7;
 }
 
 li.dropdown {
@@ -58,21 +73,21 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color:#007ec7;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color: #007ec7;color:#8bdbf6}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -878,14 +893,14 @@ div[class="GeneralEducationSubDiv"]{
 	background-color: #858fa0;
 	padding: 10px;
 	float: left;
-	margin: 20px 0px 0px 120px;
+	margin: 20px 0px 19px 120px;
 	border-style: solid;
 	border-color: black;
 	border-width: 1px;
 	border-radius: 10px;
 }
 
-.addUserContainer input[id="addUserInput"]{
+.addUserContainer input[class="addUserInput"]{
     display: inline-block;
 	font-size: 10pt;
 	padding: 3px 10px;
@@ -894,7 +909,7 @@ div[class="GeneralEducationSubDiv"]{
 	border-color: black;
 	border-radius: 4px;
 	box-sizing: border-box;
-	margin: 2px;
+	margin: 0px;
 	width: 200px;
 	height: 43px;
 }
@@ -910,7 +925,7 @@ div[class="GeneralEducationSubDiv"]{
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 10px;
-	margin: 20px 150px 0px 2px;
+	margin: 20px 150px 20px 2px;
 
 }
 .addUserContainer input[class="commonTxtBox2CSS"]{
@@ -953,6 +968,23 @@ div[class="GeneralEducationSubDiv"]{
 	border-color: black;
 	border-radius: 5px;
 }
+/* End of institution box*/
+
+/*User Name and Password*/
+
+div[class="userNameAndPwd"]{
+    text-align: center;
+    background-color: #858fa0;
+    width: 500px;
+    height: 150px;
+    margin: 0px 0px 0px 400px;
+    float: left;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+/* end of user name and password in add user*/
+
 
 /*---------------------------------    End of Add User---- ----------------------------------------------------*/
 
