--- a/jointStyle.css
+++ b/jointStyle.css
@@ -19,9 +19,18 @@ img[class="CRRClogo"]{
     float: center;
 }
 
+header
+{
+    background-color: white;
+}
+
+footer
+{
+    background-color: white;
+}
 
 body{
-background-color: #f4f5f7;
+background-color: #858fa0;
 }
 
 .TitleHeader{
@@ -37,8 +46,14 @@ width: 1200px;
 height: 1500px;
 margin-left: auto;
 margin-right: auto;
-background-color: ;
+background-color: white;
 border: 1px solid black;
+}
+
+.OutContainer
+{
+    background-color: #858fa0; 
+    margin: 0px;
 }
 
 /*Testing 1,2,3 (Navigation Bar) */
